# docs/swagger.json
@@ -50,6 +50,7 @@
                 ],
                 "parameters": [
                     {
+                        "example": "{original_url: \"https://example.com\"}",
                         "description": "URL to shorten",
                         "name": "url",
                         "in": "body",
@@ -62,6 +63,24 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
